--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <div class="container">
+    <canvas class="fade"></canvas>
     <div class="card">
       <div class="card-inner">
         <!-- <img src="images/image-equilibrium.jpg" alt=""> -->
@@ -74,6 +75,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Juan Quintero</a>.
   </div>
+
+  <script src="main.js"></script>
 
 </body>
 
